src/test/deca/context/valid/classes/class_with_string_method.deca
// Description :
// Classe avec champ string et méthode retournant string
//
// Resultats :
// ok

class E {
    String s = "hello";
    String Hello() {
        return s;
    }
}
