src/test/deca/context/invalid/return/return_wrong_type_string_in_int_custom.deca
// Description :
// return d'un string dans méthode qui doit retourner int
//
// Resultats :
// Erreur contextuelle
// Ligne 7 : type de retour incorrect

class R {
    int f() {
        return "hello"; // doit échouer
    }
}
